Use immersive for apps only in fullscreen state.

Looks like I misunderstood the comment when I refactored.

BUG=843856
TEST=covered by unittest

Change-Id: I6fb735472af25e833ef2a40f99bd0a26867da3fb
Reviewed-on: https://chromium-review.googlesource.com/1107214
Reviewed-by: Ben Wells <benwells@chromium.org>
Commit-Queue: Mitsuru Oshima <oshima@chromium.org>
Cr-Commit-Position: refs/heads/master@{#568743}
Former-commit-id: 345d868020cf4af49d0cce035333205110227ef3